--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,17 +15,22 @@
       </div>
     </div>
    <div class="col-md-6">
-     <div class="info-text">
+     <div class="info-text center_col">
        <h1 class="profile-picture-name"><%=  @user.fullname? ? @user.fullname : @user.username %></h1>
        <h3><%= @user.intrest %></h3>
        <p><%= @user.bio %></p>
        <div id="user-contact-info">
          <ul>
            <li><%= render 'follow_form' if signed_in?  %></li>
+           <li class="user_action">
+             <%= render "message_user" %>
+           </li>
          </ul>
        </div>
-       <span class="activities">ACTIVITY<span>
+       <div class="list_header center_col">ACTIVITY</div>
      </div>
+
+
      <div id="feeds">
       <% @user.questions.each do |question| %>
        <div class="profile-questions">
@@ -41,16 +46,16 @@
        <%=link_to user_path(@user), class: "views_on_profile" do %>
         <h3><span class="users_answers"><%= "Views on #{@user.first_name}'s Answers" %></span></h3>
         <div class="stat">
-          <span class="total_count">242,902</span>
+          <span class="total_count"><%= @user.views %></span>
           <div class="stat_label is_increase"> Last 30 Days</div>
         </div>
         <div class="stat">
-          <span class="total_count">502,102</span>
+          <span class="total_count"><%= @user.views %></span>
           <div class="stat_label">All Time</div>
         </div>
        <% end %>
        <div>
-          <div class="recent">Recent Post</div>
+          <div class="recent">Recent Posts</div>
         <% @related_questions.each do |a| %>
          <p class="similar"><%= link_to a.name, a  %></p>
         <% end %>
