--- a/app/views/answers/vote.js.erb
+++ b/app/views/answers/vote.js.erb
@@ -1,2 +1,3 @@
-alert('Thank you for voting.');
-$("#answer_vote_count").html('<%= @answer.votes %>');
+<%= @answer.id %>
+$("#answer-vote-count-<%= @answer.id %>").html('<%= @answer.votes %>');
+$.toaster({ priority : 'success', title : 'Title', message : 'Up voted!'});
