--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,10 +1,7 @@
 <% title "Questions" %>
 
 <%= content_tag :div, id: "questions", data: { url: questions_path(@question) } do %>
-<%= render @questions %>
+<%= render @questions, :collection => @question %>
 <% end %>
 
 <%= will_paginate @questions %>
-
-
-
