--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -31,7 +31,7 @@
 
   <div class="postinfobot">
     <nav class="options">
-      <%= link_to  "Upvote | #{@question.votes}", vote_question_path(@question.id, value: 1), method: "post", remote: true, class: 'btn btn-secondry btn-sm' %>
+      <%= link_to  "Upvote | <span id='vote-count-#{@question.id }'>#{@question.votes}</sapn>".html_safe, vote_question_path(@question.id, value: 1), method: "post", remote: true, class: 'btn btn-secondry btn-sm' %>
       <%= link_to  "Downvote", vote_question_path(@question.id, value: -1), method: "post", remote: true %>
       <% if current_user.present? %>
        <%= link_to " Add comment <i class='fa fa-comments'></i>+".html_safe, new_comment_path(:comment => { :commentable_type => @question.class.name,
