--- a/app/views/questions/vote.js.erb
+++ b/app/views/questions/vote.js.erb
@@ -1,4 +1,2 @@
-  alert('Thank you for voting');
-
-
-
+$('#vote-count-<%= @question.id %>').html("<%= @question.votes %>");
+$.toaster({ priority : 'success',  message : 'Up voted!'});
