style user indexpag

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -82,3 +82,19 @@
 .set-padding{
   padding: 10px;
 }
+
+.user_outer {
+  padding: 10px;
+}
+
+.user_middle {
+  width: 200px;
+  height: 180px;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
+}
+
+.user_inner {
+  padding: 10px;
+}
