--- a/app/views/layouts/display.html.erb
+++ b/app/views/layouts/display.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= yield :title %> INQUIRE</title>
+  <title><%= yield :title %> - Onozor</title>
+  <meta name="description" content="<%= yield :content %>">
   <%= stylesheet_link_tag    "application", 'https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
