--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,5 @@
+<% title "#{@question.name}" %>
+<% content "#{truncate @question.body, length: 150}" %>
 <!-- POST -->
 <div class="post row">
   <div class="topwrap">
