--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<% title "#{@user.username}" %>
-
+<% title "#{@user.username} Profile" %>
+<% content "#{@user.bio}" %>
 <div class="container-set">
   <div class="row clear-top">
     <div class="col-md-3">
