--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -34,7 +34,7 @@
       <ul class="nav navbar-nav navbar-right">
        <% if user_signed_in? %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= cl_image_tag current_user.avatar.url(:thumb) %> <%=  current_user.username.titleize %></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= image_tag current_user.avatar.url(:thumb) %> <%=  current_user.username.titleize %></a>
           <ul class="dropdown-menu navbar-right">
             <li><%= link_to "My Profile", user_path(current_user.username) %></li>
             <li role="separator" class="divider"></li>
