--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,4 @@
-<% title "Questions" %>
+<% title "All Questions & Answers - Onozor" %>
 
 <%= content_tag :div, id: "questions", data: { url: questions_path(@question) } do %>
 <%= render @questions, :collection => @question %>
