--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,11 @@
-
-<% if @user.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited your account from being created:</h2>
-
-    <ul>
-    <% @user.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
+<% title "signup | Sigin - Onozor" %>
 <div class="col-lg-6 signup">
   <div id="signup-container">
     <div class="third-party-signup-form">
       <%= render "devise/sessions/third_party_sign_ups" %>
     </div>
   </div>
-
 </div>
-
 
 <div class="col-lg-6 login">
   <%= render "devise/sessions/sign_in" %>
