--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,12 +10,12 @@
       <%= link_to (image_tag 'logo.png', class:'navbar-brand resize-logo'), root_path %>
     </div>
     <nav id="bs-navbar" class="collapse navbar-collapse">
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group  has-feedback">
-          <input type="text" class="form-control" id="inputInfo5" placeholder=" Search Questions" aria-describedby="inputSuccess5Status">
-          <span class="fa fa-search form-control-feedback" style="margin-top: 10px;" aria-hidden="true"></span>
-        </div>
-      </form>
+    <%= form_tag questions_path, class:"navbar-form navbar-left", :method => 'get' do %>
+      <div class="form-group  has-feedback">
+        <%= text_field_tag :search,  params[:search], class:"form-control", placeholder:"Search Questions" %>
+        <span class="fa fa-search form-control-feedback" style="margin-top: 10px;" aria-hidden="true"></span>
+      </div>
+    <% end %>
 
 
       <ul class="nav navbar-nav navbar-left col-sm-offset-10">
