--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Sign up | Sign in Overflow</title>
+  <title> Sign up | Sign in Onozor</title>
   <%= stylesheet_link_tag    "application", 'ckeditor/ckeditor.js', media: "all", "data-turbolinks-track" => true %>
     <%= stylesheet_link_tag    "application", 'https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta name="google-site-verification" content="MTw25N9bqtNqBh1bPIbqkopih7xcQsiQmSP7Qm7ZvV8" />
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -51,7 +52,7 @@
 
 
  <div class="footer devise-footer">
- <nav class="footer text-center"><p><small> © 2015 <span class="sitename">INQUIRE</span> &nbsp <a href="#">About</a>&nbsp <a href="#">Help</a>&nbsp <a href="#">Terms</a>&nbsp <a href="#">Privacy</a>
+ <nav class="footer text-center"><p><small> © <%= Date.today.year %> <span class="sitename">ONOZOR</span> &nbsp <a href="#">About</a>&nbsp <a href="#">Help</a>&nbsp <a href="#">Terms</a>&nbsp <a href="#">Privacy</a>
    </div>
    </div>
 
@@ -61,4 +62,15 @@
 
 </div>
 </body>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-68666714-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
