--- a/app/views/layouts/display.html.erb
+++ b/app/views/layouts/display.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag    "application", 'https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-
+ <meta name="google-site-verification" content="MTw25N9bqtNqBh1bPIbqkopih7xcQsiQmSP7Qm7ZvV8" />
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
   <script src="../assets/js/html5shiv.js"></script>
@@ -27,6 +27,15 @@
 
 <%= yield %>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-68666714-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
