--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -54,13 +54,13 @@
     h4{
 
     }
-   a{
-    color:black;
+   a {
+    color: #454545;
     line-height: 10px;
     font-weight: bolder;
   }
   span{
-    font-size: 10px;
+    font-size: 13px;
   }
 }
 
@@ -77,6 +77,7 @@
   font-family: Georgia,Times,"Times New Roman",serif;
   font-size: 15px;
   line-height: 1.4;
+  color: #666;
 }
 
 .set-padding{
