--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -20,7 +20,7 @@
 
       <ul class="nav navbar-nav navbar-left col-sm-offset-10">
        <li><%= link_to "<i class='fa fa-list-alt'></i> HOME".html_safe, '/' %></li>
-       <li><%= link_to "<i class='fa fa-bell-o'></i> NOTIFICATION".html_safe %></li>
+       <!-- <li><%#= link_to "<i class='fa fa-bell-o'></i> NOTIFICATIONS".html_safe %></li> -->
       </ul>
 
       <%= form_tag nil, class: 'navbar-form navbar-left' do  %>
