adds message form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
          <ul>
            <li><%= render 'follow_form' if signed_in?  %></li>
            <li class="user_action">
-             <%#= render "message_user" %>
+             <%= render "message_user" %>
            </li>
          </ul>
        </div>
