Add edits to the user profile

--- a/app/views/users/_js_textbox.html.erb
+++ b/app/views/users/_js_textbox.html.erb
@@ -1,9 +1,16 @@
-<% request_path ||= ""; field_to_edit ||= "Something's wrong. Please retry."; default_text ||= ""; placeholder ||= "Edit #{field_to_edit}" %>
+<%
+  request_path ||= ""
+  field_to_edit ||= "Something's wrong. Please retry."
+  default_text = @current_user.fullname if field_to_edit == "fullname"
+  placeholder ||= "Edit #{field_to_edit}"
+%>
 
+<% size = field_to_edit == "fullname" ? {rows: 1} : {} %>
   <%=form_for request_path, remote: true do |f| %>
-    <div class="modal-body">
+    <div class="js-textbox">
        <div class="form-group">
-         <%= f.text_area( field_to_edit, class: "form-control", id: "message-text", placeholder: placeholder, value: default_text) %>
+         <%= f.text_area(field_to_edit, {class: "form-control", id: "message-text", placeholder: placeholder, value: default_text }.merge(size) ) %>
+         <%= f.hidden_field :option, value: field_to_edit %>
        </div>
        <div>
          <%= button_tag(type: 'submit',  class: "btn btn-sm btn-success right", id: 'new_direct_message') do %>
