--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1662,6 +1662,18 @@ h3 {
 .right {
   float: right;
 }
-.edit_link {
-
+#user_intrest {
+  line-height: 50px;
+}
+.js-textbox {
+  position: relative;
+  padding: 10px 0;
+}
+#user_fullname textarea {
+  font-size: 1em;
+}
+#user_bio .user_bio {
+  font-size: 15px;
+  line-height: 1.4;
+  font-weight: normal;
 }
