--- a/app/views/users/_add_interest.html.erb
+++ b/app/views/users/_add_interest.html.erb
@@ -1,3 +1,3 @@
 <% if @current_user %>
-  <%= link_to "Add stuffs you love doing", user_edit_interest_path(@current_user), remote: :true %>
+  <%= link_to "Add stuffs you love doing", user_edit_user_path(@current_user, "intrest"), remote: :true %>
 <% end %>
