--- a/app/views/questions/_related_questions.html.erb
+++ b/app/views/questions/_related_questions.html.erb
@@ -1,33 +1,18 @@
-<% if action_name == "show" %>
-<div class="flow">
-<h3>Similar Questions</h3>
-<hr />
-<% for question in @related_questions %>
- <p class="center"> <%= link_to question.name, question %></p>
- <hr>
-<% end %>
+<!-- <div class="sidebarblock">
+  <h3>Related Questions</h3>
+  <div class="divline"></div>
+  <div class="blocktxt">
 
-</div>
-<% end %>
-
- <div class="flow">
-     <div>
-     <p><a href="#"><span class="glyphicon glyphicon-bullhorn"></span>&nbspCreate an AD</a></p>
-     <hr>
-     <%=image_tag "safe.jpg", :class => "ads" %>
-     <h5><a>Start Your Worldtells Store</a></h5>
-     <p><small> shopify.com
-       You live in the most connected time thus far. Make some money off it. </small></p>
-   </div>
-
-
- </div>
-
-   <div class="flow">
-     <div>
-      <p><small> © 2014 Overflow &nbsp <a href="#">About</a>&nbsp <a href="#">Help</a>&nbsp <a href="#">Terms</a>&nbsp <a href="#">Privacy</a>
-        <a href="#">Cookies</a>&nbsp <a href="#">Ads</a>&nbsp <a>infoBrand</a>&nbsp <a href="#">Blog</a>&nbsp <a href="#">Status</a> <a href="#">Apps</a> <a>Jobs</a> <a>Advertise</a>
-        &nbsp<a href="#">Businesses</a>&nbsp  <a href="#">Media</a>&nbsp <a href="#">Developers</a></small></p>
-
-     </div>
- </div>
+    <% User.last(3).each do |user| %>
+      <div class="media">
+        <div class="media-left">
+          <%= link_to (image_tag user.avatar.url(:thumb), class:'img-rounded'), user_path(user)  %>
+        </div>
+        <div class="media-body">
+          <p class="media-heading"><%= link_to  (user.fullname? ? user.fullname : user.username), user_path(user) %></p>
+          <p>Intersted in: <%=  user.categories.map{|a| link_to a.name, a}.join(", ").html_safe %> </p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div> -->
