--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,8 +24,8 @@
         <%= render partial: "user_info", locals: {option: "bio"} %>
         <% else %>
           <h1 class="profile-picture-name"><%= @user.fullname %></h1>
-          <h3 class="user_intrest"><%= @user.intrest || "<i>No interests yet</i>" %></h3>
-          <p><%= (@user.bio && !@user.bio.empty?) ? @user.bio : "<i>No bio yet</i>" %></p>
+          <h3 class="user_intrest"><%= @user.intrest || "<i>No interests yet</i>".html_safe %></h3>
+          <p><%= (@user.bio && !@user.bio.empty?) ? @user.bio : "<i>No bio yet</i>".html_safe %></p>
         <% end %>
        <div id="user-contact-info">
          <ul>
