--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
     </div>
    <div class="col-md-6">
      <div class="info-text center_col">
-       <% if @user.id == @current_user.id %>
+       <% if @current_user && @user.id == @current_user.id %>
         <h1 class="profile-picture-name">
           <%= render partial: "user_info", locals: {option: "fullname"} %>
         </h1>
