--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,7 +7,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to (image_tag 'logo.png', class:'navbar-brand resize-logo'), root_path %>
+      <%= link_to root_path do %>
+        <%= image_tag 'logo1.png', class:'navbar-brand resize-logo' %>
+        <h3>Onozor</h3>
+      <% end%>
     </div>
     <nav id="bs-navbar" class="collapse navbar-collapse">
     <%= form_tag questions_path, class:"navbar-form navbar-left", :method => 'get' do %>
