--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -3,18 +3,33 @@
    <div class="container about">
 
        <!-- Introduction Row -->
+       <div class="about-bg">
+         <div class="bg-overlay"></div>
        <div class="row top">
-           <div class="col-lg-12">
-               <h1 class="page-header text-center">Get answers
-                   <small>And that's it! Quite simply . . .</small>
+           <div class="col-about">
+             <div  class="about-section-desc">
+               <h1 class="about-header text-center">Ask questions. Get answers.
                </h1>
-               <p class="about-section-desc">Onozor's mission is to provide a platform where knowledge can be easily shared around the world. Knowing people travel around travel to different places, learn and experience different things, we want to encourage people to share knowledge gained from these experiences. Ranging from Rocket science and quantum physics to basic algebra, professionary culinary to home-cooking, history to Anthropoloy, etheism to extreme religion, and so on - as long as its knowledge people can gain from, then it should be shared. Ononzor makes it super easy to put up knowledge so it can be even easier referenced long after you put it up. Do your part. Make the world better.</p>
-           </div>
-       </div>
+               <div class="sm-about">And that's all there is to Onozor! Quite simply . . .</div>
 
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <div class="row">
+
+        <div class="col-lg-12 text-center">
+             <h2 class="page-header">Our mission</h2>
+         </div>
+         <div class="col-lg-12 about-desc about-main-desc">
+           <p >Onozor's mission is to provide a platform where knowledge can be easily shared around the world. Ranging from Rocket science and quantum physics to basic algebra, professionary culinary to home-cooking, history to Anthropoloy, etheism to extreme religion, and so on - as long as its knowledge people can gain from, then it should be shared.</p>
+         </div>
+      </div>
 
        <!-- Team Members Row -->
        <div class="row white-bg">
+
           <div class="col-lg-12 text-center about-desc">
                <h2 class="page-header">About Onozor</h2>
            </div>
