--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -93,9 +93,26 @@
   height: 180px;
   padding: 10px;
   text-align: center;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .user_inner {
   padding: 10px;
+}
+
+.about-bg {
+  background: image-url("bg-photo.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.bg-overlay {
+  position: absolute;
+  background-color: rgba(55, 156, 156, 0.85);
+  left: 0;
+  right: 0;
+  width: 60%;
+  height: 200px;
+  margin: 100px 20%;
 }
