changes start new topic to ask question

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -51,7 +51,7 @@
         <% end %>
       </ul>
 
-      <%= link_to "Start new Topic", new_question_path, class: 'btn  navbar-btn offset-2 topic-button pull-right'  %>
+      <%= link_to "Ask a question", new_question_path, class: 'btn  navbar-btn offset-2 topic-button pull-right'  %>
     </nav>
   </div>
 </nav>
